# elochess

./: .coveragerc  .gitignore  README.MD  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/elochess/api/: __init__.py  app.py  main.py  update.py
src/elochess/api/models/: __init__.py  camel_case_model.py
src/elochess/api/models/requests/: __init__.py  update_requests.py
src/elochess/api/models/responses/: __init__.py  update_response.py
src/elochess/base/: __init__.py  input_model.py  rating_calculator.py
src/elochess/cli/: annotations.py  app.py  update.py
src/elochess/dwz/: __init__.py  developement_coefficient.py  dwz_calculator.py  dwz_input_model.py
src/elochess/elo/: __init__.py  elo_calculator.py  elo_input_model.py  expected_score.py
src/elochess/uscf/: __init__.py  performance_rating.py  uscf_calculator.py
tests/: test_api.py  test_cli.py  test_dwz_calculator.py  test_elo_calculator.py  test_uscf_calculator.py
tests/data/: dwz_samples.json  elo_samples.json  uscf_samples.json
tests/helpers/: input_models.py  samples.py
