[project]
name = "elochess"
version = "0.2.0"
description = "A simple python package for calculating chess ratings"
readme = "README.md"
authors = [{ name = "Moritz Eckert", email = "MoritzEckert@web.de" }]
license = { text = "MIT" }
keywords = ["chess", "tournament"]
dependencies = [
    "pydantic >= 2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games"
]

[project.urls]
Homepage = "https://github.com/Moritz72/elochess"
Repository = "https://github.com/Moritz72/elochess"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.0",
    "pytest>=7.2",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["elochess"]
package-dir = {"" = "src"}

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["elochess"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = [
    "D100",    # module docstring
    "D104",    # package docstring
    "D203",    # blank line before class
    "D212",    # multi line summary first line
    "E501",    # line length
    "COM812",  # trailing comma
    "FBT001",  # boolean type positional argument
    "PLR2004", # magic value in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101", # use of assert
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
show_missing = true
skip_covered = false
